--- a/angular/src/app/via/via.component.html
+++ b/angular/src/app/via/via.component.html
@@ -1,14 +1,15 @@
 <input type="text"
            maxlength=20
-           placeholder={{initial_input}}
+           placeholder={{INITIAL_INPUT}}
            [(ngModel)]="user_input"><br>
 
 <button type="submit"
-          (click)="doPOST()">Send Information to API</button><br>
-
+            class="btn btn-default"
+            ng-readonly="display"
+            ng-init="display=false"
+            ng-click="display=true"
+            (click)="doPOST()">Send Information to API</button><br>
 <input type="text"
-             placeholder={{initial_output}}
+             placeholder={{INITIAL_OUTPUT}}
+             readonly="display"
              [(ngModel)]="server_output"><br>
-
-
-
